--- a/loops/loops_(good).ipynb
+++ b/loops/loops_(good).ipynb
@@ -1,1 +1,482 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# What to expect in this chapter"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 Interrupting the flow"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 List comprehension!"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.1 Basic syntax"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 2.2 List comprehension with conditions"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Other useful stuff"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.1 for with unpacking"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.2 for with zip()"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 3.3 for with dictionaries"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Loops (Good)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e2589132",
+   "metadata": {},
+   "source": [
+    "# What to expect in this chapter"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "96e83a8b",
+   "metadata": {},
+   "source": [
+    "# 1 Interrupting the flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "85097c4a-2cae-4f96-84be-dc2a1de07d8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 10\n",
+      "2 100\n",
+      "3 1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for power in range(5):\n",
+    "    number = 10**power\n",
+    "    if number > 5000:\n",
+    "        break\n",
+    "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "90574124-d2de-490b-9abd-4a1c09edaa55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 100\n",
+      "3 1000\n",
+      "4 10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for power in range(5):\n",
+    "    if power < 2:\n",
+    "        continue        \n",
+    "    number = 10**power\n",
+    "    print(power, number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "15643ea2-2ca2-4172-9c50-a517ba455fe8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m number \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m6\u001b[39m:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m----> 5\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m \n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(number)\n\u001b[0;32m      7\u001b[0m     number \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "number = 0\n",
+    "\n",
+    "while number < 6:\n",
+    "    if number == 3:\n",
+    "        continue  #why does this skip 4 ?\n",
+    "    print(number)\n",
+    "    number += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c87a5c52-fbfa-49d5-926d-085fbe28a7bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    # Don't proceed if the remainder is zero\n",
+    "    # I.e. if the number is even\n",
+    "    if number % 2 == 2:\n",
+    "        continue\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fa74e0bd-17b9-42d2-b928-2f2b187d74a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[35], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m number\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m number \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m4\u001b[39m: \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(number)\n\u001b[0;32m      6\u001b[0m     number \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "number=0\n",
+    "\n",
+    "while True:\n",
+    "    if number > 4: continue\n",
+    "    print(number)\n",
+    "    number += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9ac24bc8-8341-4f7c-b698-bd070e24d68e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "number=0\n",
+    "\n",
+    "while True:\n",
+    "    print(number)\n",
+    "    number += 1\n",
+    "    if number > 4: break"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7948a597",
+   "metadata": {},
+   "source": [
+    "# 2 List comprehension!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8c55bc7e",
+   "metadata": {},
+   "source": [
+    "## 2.1 Basic syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7ef6f4eb-eab6-44d4-88da-aedeb3d8468a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number for number in range(5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "b792f131-e246-4cf5-814b-6fea0f07d1d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number*2 for number in range(5)]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9c1705a3",
+   "metadata": {},
+   "source": [
+    "## 2.2 List comprehension with conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "e4840d34-42db-4061-b153-0fe43821ca96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 7]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[number for number in range(10) if number % 3 ==1]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d39f13d7",
+   "metadata": {},
+   "source": [
+    "# 3 Other useful stuff"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3de9afdc",
+   "metadata": {},
+   "source": [
+    "## 3.1 for with unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "618615af-617c-40f5-9a8a-e8f7a91b95a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = 2, y = 5, z = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z=[2, 5, 10]\n",
+    "print(f'x = {x}, y = {y}, z = {z}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "aa94eb76-e33b-4470-8342-23feec74b464",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "py_superhero_info = [['Natasha Romanoff', 'Black Widow'],\n",
+    "                     ['Tony Stark', 'Iron Man'],\n",
+    "                     ['Stephen Strange', 'Doctor Strange']]\n",
+    "\n",
+    "for real_name, super_name in py_superhero_info:\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c8962773",
+   "metadata": {},
+   "source": [
+    "## 3.2 for with zip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "5cbe0dfe-1b3a-4edb-8531-f21868b5dfa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "super_names = [\"Black Widow\", \"Iron Man\", \"Doctor Strange\"]\n",
+    "real_names = [\"Natasha Romanoff\", \"Tony Stark\", \"Stephen Strange\"]\n",
+    "\n",
+    "for real_name, super_name in zip(real_names,super_names):\n",
+    "    print(f\"{real_name} is Marvel's {super_name}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "6be5fa72",
+   "metadata": {},
+   "source": [
+    "## 3.3 for with dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "dbd43046-8930-490a-ab66-99549516ed07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Natasha Romanoff is Marvel's Black Widow!\n",
+      "Tony Stark is Marvel's Iron Man!\n",
+      "Stephen Strange is Marvel's Doctor Strange!\n"
+     ]
+    }
+   ],
+   "source": [
+    "superhero_info={\"Natasha Romanoff\": \"Black Widow\",\n",
+    "                \"Tony Stark\": \"Iron Man\",\n",
+    "                \"Stephen Strange\": \"Doctor Strange\"}\n",
+    "\n",
+    "for key, value in superhero_info.items():\n",
+    "    print(f\"{key} is Marvel's {value}!\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8a9f3e38",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
