functions (need) exercise ready for checking

--- a/functions  exercises/functions_(need)_exercises.ipynb
+++ b/functions  exercises/functions_(need)_exercises.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "fdfa250a-90ff-452f-9eed-8928fd1c7f12",
    "metadata": {},
    "outputs": [],
@@ -84,9 +84,9 @@
     "    BMI = weight / (height ** 2)\n",
     "    if BMI < 18.5:\n",
     "        print ('underweight')\n",
-    "    if 18.5 <= BMI <= 24.9:        #what happens with between 24.9 and 25?\n",
+    "    if 18.5 <= BMI < 25: \n",
     "        print ('normal weight')\n",
-    "    if 25 <= BMI <= 29.9:\n",
+    "    if 25 <= BMI < 30:\n",
     "        print ('overweight')\n",
     "    if BMI >=30:\n",
     "        print ('OBESITY')"
@@ -130,12 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "ceae7588-24fe-4e19-9ec9-00233ab823ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normal weight\n"
+     ]
+    }
+   ],
    "source": [
-    "calculate_bmi(50, 1.416)  #it gives nothing when it is between 24.9 and 25"
+    "calculate_bmi(50, 1.416) "
    ]
   }
  ],
