--- a/files, folders & os/files,_folders_&_os_(need).ipynb
+++ b/files, folders & os/files,_folders_&_os_(need).ipynb
@@ -1640,11 +1640,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5e3f9423-e87e-4138-98e2-d9f00fdb48a8",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[WinError 145] The directory is not empty: 'people/Ringo'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrmdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpeople/Ringo\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mOSError\u001b[0m: [WinError 145] The directory is not empty: 'people/Ringo'"
+     ]
+    }
+   ],
+   "source": [
+    "os.rmdir('people/Ringo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ce1ccb51-31a9-4dce-aa3d-2572062c8ec7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shutil.rmtree('people/Ringo')"
+   ]
   }
  ],
  "metadata": {
