--- a/loops  exercises/loops_(good)_exercises.ipynb
+++ b/loops  exercises/loops_(good)_exercises.ipynb
@@ -11,21 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "0ec2d46f-8a32-4eee-b918-59b26bdc6c57",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
+      "723 ns ± 29.7 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "#Exercise 1\n",
-    "\n",
     "%%timeit \n",
     "for x in range (0, 10):\n",
     "    if x % 2 == 0:\n",
@@ -35,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "c6966cc7-7694-43c6-b40b-53a9132172b2",
    "metadata": {},
    "outputs": [
@@ -43,13 +41,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.05 µs ± 35.9 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.13 µs ± 70 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "#Exercise 2\n",
-    "%timeit [x**2 for x in range (10) if x % 2 == 1]"
+    "%%timeit \n",
+    "[x**2 for x in range (10) if x % 2 == 1]"
    ]
   },
   {
