--- a/loops  exercises/loops_(good)_exercises.ipynb
+++ b/loops  exercises/loops_(good)_exercises.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "63d55391-1a02-41ba-9c4d-8b659836f03a",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
     "    (2018, 408.52), (2019, 411.44), (2020, 414.24)\n",
     "]\n",
     "\n",
-    "for i in range(len(co2_data)):\n",
+    "for i in range(1, len(co2_data)):\n",
     "    year, co2 = co2_data[i]\n",
     "    last_year, last_co2 = co2_data[i-1]\n",
     "    increase_co2 = co2 - last_co2\n",
